data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1249.wast
;; 10. **Test Description:**    - Define and export a function with deeply nested blocks involving `br` instructions that interact with separately defined control structures in an imported context.    - Import and execute the function, verifying that deeply nested labels and control transfers respect structured control rules without stack corruption.    - **Constraint:** Test nested label indexing and operand stack unwinding deeply, specifically looking for edge cases in complex nested setups across module boundaries.

(assert_invalid
  (module 
    (import "env" "external" (func $external))
    (func (export "test") 
      (block (result i32) 
        (i32.const 0) 
        (block (result i32) 
          (loop (result i32) 
            (block (result i32) 
              (block (br 3)) 
              (i32.const 1)
            )
          )
        )
      ) 
    )
  )
  "type mismatch"
)